--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
 include ':app'
+//gradle.ext.exoplayerRoot = '/Users/fahime/Documents/ExoPlayer'
+//gradle.ext.exoplayerModulePrefix = 'exoplayer-'
+//apply from: new File(gradle.ext.exoplayerRoot, 'core_settings.gradle')
