--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         </activity>
         <activity android:name=".Main2Activity">
         </activity>
+        <activity android:name=".SplashActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
     </application>
 
 </manifest>
