--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".PlayerActivity">
+        <activity android:name=".SplashActivity" android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -30,7 +30,7 @@
         </activity>
         <activity android:name=".Main2Activity">
         </activity>
-        <activity android:name=".SplashActivity">
+        <activity android:name=".PlayerActivity">
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
