--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
         <activity android:name=".PlayerActivity">
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".ui.login.LoginActivity">
         </activity>
     </application>
 
