--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,10 @@ dependencies {
     implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+//    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha08'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
