--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -12,6 +12,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 11
+        multiDexEnabled true
         versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary true
@@ -43,6 +44,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'com.google.android.material:material:1.0.0-rc01'
+
+    //glide ---------------
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    kapt 'com.android.support:support-annotations:27.1.1'
+    //glide ---------------------------
 //    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha08'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
